# fp_lab2

./: README.md  dune  dune-project  fp_lab2.opam  prefix_tree_bag.ml
.github/workflows/: main.yml
lib/: dune  prefix_tree_bag.ml
src/: bag.ml  dune
test/: bag_test.ml  dune  prefix_tree_abg_test.ml
